extends Node3D

@export var treasure_scene: PackedScene  # –î–æ–¥–∞—ò —ò–∞ —Å—Ü–µ–Ω–∞—Ç–∞ –∑–∞ –±–æ–≥–∞—Ç—Å—Ç–≤–æ –ø—Ä–µ–∫—É –∏–Ω—Å–ø–µ–∫—Ç–æ—Ä
@export var num_treasures: int = 7  # –ö–æ–ª–∫—É –±–æ–≥–∞—Ç—Å—Ç–≤–∞ –¥–∞ —Å–µ –≥–µ–Ω–µ—Ä–∏—Ä–∞–∞—Ç

var score = 0
var total_treasures = 0

@onready var timer = $Timer  # –ü–æ–≤—Ä–∑—É–≤–∞—ö–µ —Å–æ Timer Node
@onready var player = $CharacterBody3D  # –ü–æ–≤—Ä–∑—É–≤–∞—ö–µ —Å–æ –∏–≥—Ä–∞—á–æ—Ç
@onready var ground = $StaticBody3D  # –ü–æ–≤—Ä–∑—É–≤–∞—ö–µ —Å–æ –∑–µ–º—ò–∞—Ç–∞ (–ø–æ–≤—Ä—à–∏–Ω–∞ –∫–∞–¥–µ —Å–µ –ø–æ—ò–∞–≤—É–≤–∞–∞—Ç –±–æ–≥–∞—Ç—Å—Ç–≤–∞—Ç–∞)
@onready var score_label = $CanvasLayer/Control/ScoreLabel  # UI —Å–∫–æ—Ä
@onready var timer_label = $CanvasLayer/Control/TimerLabel  # UI —Ç–∞—ò–º–µ—Ä
@onready var game_over_screen = $CanvasLayer/Control/GameOverScreen  # Game Over Screen
@onready var game_over_text = $CanvasLayer/Control/GameOverScreen/GameOverText  # –¢–µ–∫—Å—Ç –≤–æ –∫—Ä–∞—ò–Ω–∏–æ—Ç –µ–∫—Ä–∞–Ω
@onready var retry_button = $CanvasLayer/Control/GameOverScreen/RetryButton  # –ö–æ–ø—á–µ –∑–∞ —Ä–µ—Å—Ç–∞—Ä—Ç

func _ready():
	if player == null:
		print("‚ùå ERROR: –ò–≥—Ä–∞—á–æ—Ç –Ω–µ –µ –ø—Ä–æ–Ω–∞—ò–¥–µ–Ω! –ü—Ä–æ–≤–µ—Ä–µ—Ç–µ –≥–æ –∏–º–µ—Ç–æ –≤–æ —Å—Ü–µ–Ω–∞—Ç–∞.")
		return

	game_over_screen.visible = false  # –°–æ–∫—Ä–∏—ò –≥–æ Game Over Screen –Ω–∞ —Å—Ç–∞—Ä—Ç
	retry_button.pressed.connect(_restart_game)  # –ü–æ–≤—Ä–∑–∏ –≥–æ –∫–æ–ø—á–µ—Ç–æ –∑–∞ —Ä–µ—Å—Ç–∞—Ä—Ç

	spawn_treasures()
	total_treasures = num_treasures
	timer.start(60)  # –ó–∞–ø–æ—á–Ω—É–≤–∞ 1 –º–∏–Ω—É—Ç–∞ –æ–¥–±—Ä–æ—ò—É–≤–∞—ö–µ
	update_ui()

func spawn_treasures():
	if ground == null:
		print("‚ùå ERROR: StaticBody3D –Ω–µ –µ –ø—Ä–æ–Ω–∞—ò–¥–µ–Ω! –ü—Ä–æ–≤–µ—Ä–µ—Ç–µ —ò–∞ –≤–∞—à–∞—Ç–∞ —Å—Ü–µ–Ω–∞.")
		return

	var ground_size = ground.get_child(0).mesh.size  # –î–æ–±–∏—ò –≥–æ–ª–µ–º–∏–Ω–∞ –∞–∫–æ –∫–æ—Ä–∏—Å—Ç–∏—à MeshInstance3D
	var player_pos = player.global_transform.origin

	for i in range(num_treasures):
		var treasure = treasure_scene.instantiate()  # –°–æ–∑–¥–∞–≤–∞—ö–µ –Ω–æ–≤–æ –±–æ–≥–∞—Ç—Å—Ç–≤–æ

		# –ù–∞–º–∞–ª–µ–Ω –æ–ø—Å–µ–≥ –Ω–∞ X –∏ Z –∫–æ–æ—Ä–¥–∏–Ω–∞—Ç–∏ –∑–∞ –¥–∞ –Ω–µ —Å–µ —Å–æ–∑–¥–∞–≤–∞–∞—Ç –ø—Ä–µ–¥–∞–ª–µ–∫—É
		var x = randf_range(-ground_size.x * 0.3, ground_size.x * 0.3)  
		var z = randf_range(-ground_size.z * 0.3, ground_size.z * 0.3)  

		# –ü—Ä–æ–≤–µ—Ä–∫–∞ –∑–∞ –º–∏–Ω–∏–º–∞–ª–Ω–∞ –æ–¥–¥–∞–ª–µ—á–µ–Ω–æ—Å—Ç –æ–¥ –∏–≥—Ä–∞—á–æ—Ç –∑–∞ –¥–∞ —Å–µ –∏–∑–±–µ–≥–Ω–µ –ø—Ä–µ–º–Ω–æ–≥—É –±–ª–∏—Å–∫–æ —Å–æ–∑–¥–∞–≤–∞—ö–µ
		if abs(z) < 1.5:  
			z += sign(z) * 1.5  

		var position = player_pos + Vector3(x, 0.1, z)  
		treasure.transform.origin = position

		add_child(treasure)  # –î–æ–¥–∞–≤–∞—ö–µ –≤–æ —Å—Ü–µ–Ω–∞—Ç–∞
		treasure.add_to_group("treasures")  # –î–æ–¥–∞–≤–∞—ö–µ –≤–æ –≥—Ä—É–ø–∞ –∑–∞ —Å–ª–µ–¥–µ—ö–µ
		treasure.collected.connect(_on_treasure_collected)  # –ü–æ–≤—Ä–∑—É–≤–∞—ö–µ –Ω–∞ —Å–∏–≥–Ω–∞–ª

func _on_treasure_collected():
	score += 1
	update_ui()
	print("Score:", score)

	if score >= total_treasures:
		game_over(true)  # –ü–æ–±–µ–¥–∞ –∞–∫–æ —Å–µ —Å–æ–±–µ—Ä–∞—Ç —Å–∏—Ç–µ –±–æ–≥–∞—Ç—Å—Ç–≤–∞

func _on_timer_timeout():
	game_over(false)  # –ü–æ—Ä–∞–∑ –∞–∫–æ –∏—Å—Ç–µ—á–µ –≤—Ä–µ–º–µ—Ç–æ

func game_over(won: bool):
	timer.stop()
	game_over_screen.visible = true  # –ü—Ä–∏–∫–∞–∂–∏ –≥–æ –∫—Ä–∞—ò–Ω–∏–æ—Ç –µ–∫—Ä–∞–Ω

	if won:
		print("üèÜ –ü–æ–±–µ–¥–∞! –°–∏—Ç–µ –±–æ–≥–∞—Ç—Å—Ç–≤–∞ —Å–µ —Å–æ–±—Ä–∞–Ω–∏!")
		game_over_text.text = "üèÜ –ü–æ–±–µ–¥–∞! –°–∏—Ç–µ –±–æ–≥–∞—Ç—Å—Ç–≤–∞ —Å–µ —Å–æ–±—Ä–∞–Ω–∏!"
	else:
		print("‚è≥ –í—Ä–µ–º–µ—Ç–æ –∏—Å—Ç–µ—á–µ!")
		game_over_text.text = "‚è≥ –í—Ä–µ–º–µ—Ç–æ –∏—Å—Ç–µ—á–µ!"

func _restart_game():
	# –†–µ—Å—Ç–∞—Ä—Ç–∏—Ä–∞—ö–µ –Ω–∞ —Å–∏—Ç–µ –ø–∞—Ä–∞–º–µ—Ç—Ä–∏
	score = 0
	timer.start(60)
	game_over_screen.visible = false  # –°–æ–∫—Ä–∏—ò –≥–æ –∫—Ä–∞—ò–Ω–∏–æ—Ç –µ–∫—Ä–∞–Ω
	update_ui()

	# –û—Ç—Å—Ç—Ä–∞–Ω–∏ –≥–∏ —Å—Ç–∞—Ä–∏—Ç–µ –±–æ–≥–∞—Ç—Å—Ç–≤–∞
	for treasure in get_tree().get_nodes_in_group("treasures"):
		treasure.queue_free()

	spawn_treasures()  # –ü–æ–≤—Ç–æ—Ä–Ω–æ –≥–µ–Ω–µ—Ä–∏—Ä–∞—ò –±–æ–≥–∞—Ç—Å—Ç–≤–∞

func _process(delta):
	if timer.time_left > 0:
		timer_label.text = "‚è≥ Time: " + str(round(timer.time_left))  # –ê–∂—É—Ä–∏—Ä–∞—ö–µ –Ω–∞ —Ç–∞—ò–º–µ—Ä

func update_ui():
	score_label.text = "üí∞ Score: " + str(score)  # –ê–∂—É—Ä–∏—Ä–∞—ö–µ –Ω–∞ —Å–∫–æ—Ä –≤–æ UI
